test-data/elab/local-var/unbound.snapshot
exit status: 0

stdout = """
#error : #error
"""

stderr = """
error: Unbound variable: x
  ┌─ test-data/elab/local-var/unbound.pion:1:8
  │
1 │ #check x;
  │        ^
"""
